# Backbone

./: .gitignore  AUTHORS  INSTALL
Licenses/: Font-DejaVu  NeXT-Examples
System/: Backbone.make  Backbone.make.in  GNUmakefile  GNUmakefile.in  acinclude.m4  bootstrap  configure.ac
System/.misc/: cvs2cl  logNames.txt
System/Applications/Preferences/: .cvsignore  BundleController.h  BundleController.m  COPYING  Config.h  Controller.h  Controller.m  GNUmakefile  GNUmakefile.in  GNUmakefile.postamble  GNUmakefile.preamble  Preferences.gorm  PreferencesInfo.plist  PreferencesInfo.plist.in  PrefsController.h  PrefsController.m  PrefsIcon_Defaults.tiff  PrefsIcon_Font.tiff  PrefsIcon_Time.tiff  PrefsModule.tiff  PrefsWindow.h  PrefsWindow.m  README  TODO  main.m
System/Applications/Preferences/English.lproj/: Localizable.strings  Preferences.classes  Preferences.gorm
System/Applications/Preferences/English.lproj/PrefsApp.gorm/: data.classes  data.info  objects.gorm
System/Applications/Preferences/MiscFiles/: LOGNAMES
System/Applications/Preferences/Modules/Colors/: 0Backbone.colorScheme  1BackboneSkinny.colorScheme  2Backbone10.colorScheme  Colors+Actions.m  Colors+TableView.m  Colors+Utilities.m  Colors.h  Colors.m  GNUmakefile  GNUmakefile.in  GNUmakefile.postamble  GNUmakefile.preamble  HiContrast.colorScheme  IrixDark.colorScheme  IrixPurple.colorScheme  Khaki.colorScheme  NSColor+StringHandling.h  NSColor+StringHandling.m  NSColor+str.h  NSColor+str.m  Preview.h  Preview.m  SolarisCDE.colorScheme  Windows2000.colorScheme  WindowsClassic.colorScheme
System/Applications/Preferences/Modules/Colors/English.lproj/Color.gorm/: data.classes  objects.gorm
System/Applications/Preferences/Modules/Colors/English.lproj/Colors.gorm/: data.classes  objects.gorm
System/Applications/Preferences/Modules/Defaults/: .cvsignore  Defaults.h  Defaults.m  DefaultsView.h  DefaultsView.m  GNUmakefile  GNUmakefile.in  GNUmakefile.preamble
System/Applications/Preferences/Modules/Defaults/English.lproj/Defaults.gorm/: data.classes  objects.gorm
System/Applications/Preferences/Modules/Font/: Font.h  Font.m  GNUmakefile  GNUmakefile.in
System/Applications/Preferences/Modules/Font/English.lproj/: Font.gorm  Localizable.strings
System/Applications/Preferences/Modules/Font/English.lproj/Fonts.gorm/: data.classes  objects.gorm
System/Applications/Preferences/Modules/Font/Russian.lproj/: Font.classes  Localizable.strings
System/Applications/Preferences/Modules/Keyboard/: GNUmakefile  GNUmakefile.in  GNUmakefile.preamble  Keyboard.classes  Keyboard.gorm  Keyboard.h  Keyboard.m  KeyboardView.h  KeyboardView.m
System/Applications/Preferences/Modules/Keyboard/English.lproj/Keyboard.gorm/: data.classes  objects.gorm
System/Applications/Preferences/Modules/PrefsApp/: GNUmakefile  GNUmakefile.in  GNUmakefile.preamble  PrefsApp.classes  PrefsApp.gorm  PrefsApp.h  PrefsApp.m  PrefsAppView.h  PrefsAppView.m
System/Applications/Preferences/Modules/Time/: AnalogMask.tiff  BBCalClock.h  BBCalClock.m  BBClassicAnalog.h  BBClassicAnalog.m  BBClockView.h  BBClockView.m  ClockView.h  ClockView.m  Date-0.tiff  Date-1.tiff  Date-2.tiff  Date-3.tiff  Date-4.tiff  Date-5.tiff  Date-6.tiff  Date-7.tiff  Date-8.tiff  Date-9.tiff  DateField.tiff  Day-0.tiff  Day-1.tiff  Day-2.tiff  Day-3.tiff  Day-4.tiff  Day-5.tiff  Day-6.tiff  Day-7.tiff  GNUmakefile  GNUmakefile.in  GNUmakefile.preamble  Icon.tiff  Mask.tiff  Month-01.tiff  Month-02.tiff  Month-03.tiff  Month-04.tiff  Month-05.tiff  Month-06.tiff  Month-07.tiff  (+22 more)
System/Applications/Preferences/Modules/Time/English.lproj/: Localizable.strings
System/Applications/Preferences/Modules/Time/English.lproj/Time.gorm/: data.classes  objects.gorm
System/Applications/Terminal/: GNUmakefile  GNUmakefile.in  Label.m  PreferencesWindowController.m  Services.m  ServicesParameterWindowController.m  ServicesPrefs.m  Terminal.h  Terminal.tiff  TerminalInfo.plist  TerminalInfo.plist.in  TerminalParser_Linux.m  TerminalParser_LinuxPrefs.m  TerminalView.h  TerminalView.m  TerminalViewPrefs.m  TerminalWindow.m  TerminalWindowPrefs.m  autokeyviewchain.m  cursor_filled.tiff  cursor_inverted.tiff  cursor_line.tiff  cursor_stroked.tiff  forkpty.c  forkpty.h  main.m
System/Applications/Terminal/Turkish.lproj/: Localizable.strings
System/Applications/TextEdit/: COPYING  Controller.h  Controller.m  Document.h  Document.m  DocumentReadWrite.m  Edit_main.m  GNUmakefile  GNUmakefile.in  GNUmakefile.preamble  MultiplePageView.h  MultiplePageView.m  Preferences.h  Preferences.m  README.rtf  ScalingScrollView.h  ScalingScrollView.m  TextEditInfo.plist  TextEditInfo.plist.in  TextFinder.h  TextFinder.m
System/Applications/TextEdit/English.lproj/Document.gorm/: data.classes  objects.gorm
System/Applications/TextEdit/English.lproj/Edit.gorm/: data.classes  objects.gorm
System/Applications/TextEdit/English.lproj/EncodingAccessory.gorm/: data.classes  objects.gorm
System/Applications/TextEdit/English.lproj/FindPanel.gorm/: data.classes  objects.gorm
System/Applications/TextEdit/English.lproj/Info.gorm/: EditTitle.tiff  data.classes  objects.gorm
System/Applications/TextEdit/English.lproj/Preferences.gorm/: data.classes  objects.gorm
System/Fonts/: .cvsignore  COPYING  GNUmakefile  GNUmakefile.in  Mono.plist  Serif.plist  System.plist  makefonts
System/Frameworks/BBAppKit/: BBAppKit.h  BBVCTextField.h  BBVCTextField.m  BBVCTextFieldCell.h  BBVCTextFieldCell.m  GNUmakefile.in
System/Frameworks/PrefsModule/: .cvsignore  COPYING  GNUmakefile  GNUmakefile.in  GNUmakefile.preamble  PrefsModule.h
System/Palettes/BBAppKit/: BBAppKitPalette.h  BBAppKitPalette.m  Backbone2.tiff  GNUmakefile.in  palette.table
System/Palettes/BBAppKit/BBAppKit.gorm/: data.classes  objects.gorm
System/Tools/bbterm/: TermTalker.m
System/Tools/open/: .cvsignore  BBFileOpener.h  BBFileOpener.m  GNUmakefile  GNUmakefile.in  GNUmakefile.postamble  GNUmakefile.preamble  desktop.h  desktop.m  open.h  open.m  print.h  run.h  run.m
System/m4/: iconv.m4  lib-link.m4  lib-prefix.m4
